<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bento_diagnostics</name>
  <version>0.1.0</version>
  <description>Diagnostics for nodes used on bento robots</description>
  <maintainer email="snaens@snaens.net">Sam (snaens) Pelz</maintainer>
  <license>MIT</license>

  <depend>diagnostic_updater</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
